syntax = "proto3";

package log;

option go_package = "github.com/emresahna/heimdall/internal/sender";

import "google/protobuf/timestamp.proto";

service LogService {
  rpc SendLogs (LogBatch) returns (Response);
}

message LogEntry {
  google.protobuf.Timestamp timestamp = 1;
  uint32 pid = 2;
  string type = 3;
  string payload = 4;
  uint64 duration_ns = 5;
  uint32 status = 6;
  string method = 7;
  string path = 8;
}

message LogBatch {
  repeated LogEntry entries = 1;
}

message Response {
  bool success = 1;
  string message = 2;
}